2006-03-03  Brian Bidulock  <bidulock@openss7.org>

	* THANKS: updated for release
	* netperf.macros: updated for release
	* netperf.refs: updated references
	* README-nexusware: updated for release
	* AUTHORS: updated for release
	* netlib.c: corrections for 64-bit compile
	* netserver.c: corrections for 64-bit compile
	* netsh.c: corrections for 64-bit compile
	* nettest_bsd.c: corrections for 64-bit compile
	* nettest_dlpi.c: corrections for 64-bit compile
	* nettest_xti.c: corrections for 64-bit compile

2006-03-02  Brian Bidulock  <bidulock@openss7.org>

	* README: updated for release
	* manual/releases.texi: updated release notes
	* LICENSE: added HP license in a common place
	* Makefile.am: added LICENSE file to distribution
	* manual/releases.texi (Bugs, Known Bugs, Maturity): updated release notes
	* manual/netperf.texi (detailed node listing): added missing Troubleshooting
	* README-cvs: updated for release

2006-03-01  Brian Bidulock  <bidulock@openss7.org>

	* ChangeLog: corrected format of change log
	* TODO: updated to do items
	* README: updated for release

2006-02-23  Brian Bidulock  <bidulock@openss7.org>

	* ChangeLog: modified -- updated for new release
	* Makefile.am: modified -- added TODO file to distribution
	* TODO: added -- added TODO file to distribution

-----

Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com>
Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>

All Rights Reserved.

This program is free software; you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation; version 2 of the License.

This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with