@@ -1,5 +1,5 @@
 OpenSS7 Netperf -- CVS procedures.  2006-03-02
-$Id: README-cvs,v 0.9.2.5 2006/03/03 11:56:41 brian Exp $
+$Id: README-cvs,v 0.9.2.6 2006/03/04 05:33:33 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
 See the end for copying conditions (for this file).
@@ -40,14 +40,10 @@ requires tools not normally distributed with the other releases.
 The build host requires the following GNU tools:
 
    * `autoconf 2.59'
-
-   * `automake 1.9.5'
-
-   * `libtool 1.5.14'
-
-   * `gettext 0.14.1'
-
-   * `texinfo 4.6'
+   * `automake 1.9.6'
+   * `libtool 1.5.22'
+   * `gettext 0.14.5'
+   * `texinfo 4.8'
 
 It should be stressed that, in particular, the `autoconf' and `automake'
 must be at version releases `2.59' and `1.9'.  _The versions normally
